# ludo_word2vec

./: Cargo.toml  README.md
src/: ProbabilityFunctions.rs  lib.rs  probability_functions.rs  utils.rs
src/probability_functions/: hsoftmax.rs  nce.rs  softmax.rs
src/utils/: cost.rs  enums.rs  funcs.rs  initialization.rs  preprocessing.rs  types.rs
tests/: test1.rs  train_test.rs  trained_weights.json  validation_test.rs  word_set.txt
