[package]
name = "word-embeddings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray-rand= "0.14"
ndarray = "0.15"
activation_functions = "0.1"
regex = "1.6"
itertools = "0.10"
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }